Bug 374112: Ensure that empty ns gets empty prefix. r=brendan